# advent-of-code-2025

./: aoc.py  newday.sh  pyproject.toml  run.sh  run_fast.sh  util.py
day01/: code.py  input.txt
day02/: code.py  input.txt
day03/: code.py
day04/: code.py
day05/: code.py
day06/: code.py  ex.txt  input.txt
day07/: code.py
day08/: code.py
day09/: code.py  input.txt
day10/: code.py  part2.go
day11/: code.py  input.txt
day12/: code.py  input.txt
